tests/ui/feature-gates/feature-gate-arbitrary_self_types-raw-pointer.stderr
error[E0307]: invalid `self` parameter type: `*const Foo`
  --> $DIR/feature-gate-arbitrary_self_types-raw-pointer.rs:4:18
   |
LL |     fn foo(self: *const Self) {}
   |                  ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0307]: invalid `self` parameter type: `*const ()`
  --> $DIR/feature-gate-arbitrary_self_types-raw-pointer.rs:14:18
   |
LL |     fn bar(self: *const Self) {}
   |                  ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error[E0307]: invalid `self` parameter type: `*const Self`
  --> $DIR/feature-gate-arbitrary_self_types-raw-pointer.rs:9:18
   |
LL |     fn bar(self: *const Self);
   |                  ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or a type that dereferences to it
   = help: consider changing to `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0307`.
